Fix SonarQube issues (2)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>